<resources>
    <string name="app_name">My Application</string>
    <string name="edit_message">Enter a message</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_send">Submit</string>
    <string name="label_name">your name: </string>
    <string name="label_like">you like: </string>
    <string name="label_dislike">you dislike: </string>
    <string name="enter_text">type here</string>
    <string name="title_activity_display_message">My Message</string>


</resources>
